On BeOS, attempt to recreate the PollableEvent if PR_Poll fails. Bug #70808 r=darin sr=dougt